added some styling

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
     <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
         <title>Home</title>
     </head>
     <body>
-        <img src="kassie.jpg">
-        <h1>Stephan Green</h1>
-        <a href="resume.html">Resume</a>
-        <a href="bio.html">Biography</a>
+        <div class="centering">
+            <h1>Stephan Green</h1>
+            <img src="kassie.jpg" id="dog_pic">
+            <p>
+                <a href="resume.html">Resume</a>
+                <a href="bio.html">Biography</a>
+            </p>
+        </div>
     </body>
 </html>
