--- a/resume.html
+++ b/resume.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+
         <title>Resume</title>
     </head>
     <body>
         <!--Name-->
-        <h1>Stephan Green</h1>
-
+        <h1 id="name">Stephan Green</h1>
+        <div class="res_sep"></div>
         <!--Education-->
-        <h1>Education</h1>
-        <h3>Tufts University</h3>
-        <h4>2016 to 2021</h4>
-        <li>Intro to Computer Science, Data Structures, Machine Learning,
-            Web Programming & Engineering</li>
-        <li>History of Europe since 1815, Byzantines, Ancient Rome, Japan until 1868, North America </li>
-
+        <div class="info">
+            <h1>Education</h1>
+            <h3>Tufts University | History Major</h3>
+            <h4>2016 to 2021</h4>
+            <li>Intro to Computer Science, Data Structures, Machine Learning,
+                Web Programming & Engineering</li>
+            <li>History of Europe since 1815, Byzantines, Ancient Rome, Japan until 1868, North America </li>
+        </div>
+        <div class="res_sep"></div>
         <!--Work Experience-->
-        <h1>Work Experience</h1>
-        <h3>Intern Website Editor</h3>
-        <p>bMobilized/Career Interactive
-           July 2015 to August 2015</p>
-        <li>Wrote, Designed, and edited mobile websites</li>
-        <li>Designed websites using HTML, CSS, and JavaScript</li>
-
+        <div class="info">
+            <h1>Work Experience</h1>
+            <h3>Intern Website Editor</h3>
+            <p>bMobilized/Career Interactive
+               July 2015 to August 2015</p>
+            <li>Wrote, Designed, and edited mobile websites</li>
+            <li>Designed websites using HTML, CSS, and JavaScript</li>
+        </div>
+        <div class="res_sep"></div>
         <!--Skills-->
-        <h1>Skills</h1>
-        <h3>Programming Languages:</h3>
-        <p>C/C++, CSS, HTML, JavaScript, Python</p>
-        <h3>Microsoft Office: </h3>
-        <p>Word, Excel, Powerpoint</p>
-        <h3>Video Game Engines: </h3>
-        <p>Godot, Unity</p>
-
+        <div class="info">
+            <h1>Skills</h1>
+            <h3>Programming Languages:</h3>
+            <p>C/C++, CSS, HTML, JavaScript, Python</p>
+            <h3>Microsoft Office: </h3>
+            <p>Word, Excel, Powerpoint</p>
+            <h3>Video Game Engines: </h3>
+            <p>Godot, Unity</p>
+        </div>
+        <div class="res_sep"></div>
         <!--Activities-->
-        <h1>Activities</h1>
-        <h3>Itch.io Game Jam Participant</h3>
+        <div class="info">
+            <h1>Activities</h1>
+            <h3>Itch.io Game Jam Participant</h3>
+      </div>
+
+            <div class="res_sep"></div>
+        <a href="index.html">Back to Home</a>
     </body>
 
 </html>
