fixed errors and warnings from validation service

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
       <link rel="stylesheet" type="text/css" href="style.css">
         <title>Home</title>
@@ -6,7 +7,7 @@
     <body>
         <div class="centering">
             <h1>Stephan Green</h1>
-            <img src="kassie.jpg" id="dog_pic">
+            <img src="kassie.jpg" alt="Picture of my pitbull" id="dog_pic">
             <p>
                 <a href="resume.html">Resume</a>
                 <a href="bio.html">Biography</a>
