--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -43,7 +44,7 @@
         <div class="info">
             <h1>Activities</h1>
             <h3>Itch.io Game Jam Participant</h3>
-      </div>
+       </div>
 
             <div class="res_sep"></div>
         <a href="index.html">Back to Home</a>
