--- a/resume.html
+++ b/resume.html
@@ -15,9 +15,10 @@
             <h3>Tufts University | History Major</h3>
             <h4>2016 to 2021</h4>
             <ul>
-                <li>Intro to Computer Science, Data Structures, Machine Learning,
-                    Web Programming & Engineering</li>
-                <li>History of Europe since 1815, Byzantines, Ancient Rome, Japan until 1868, North America </li>
+                <li>Intro to Computer Science, Data Structures, Machine Learning
+                    , Web Programming & Engineering</li>
+                <li>History of Europe since 1815, Byzantines, Ancient Rome,
+                    Japan until 1868, North America </li>
             </ul>
         </div>
         <div class="res_sep"></div>
