--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <p>
                 <a href="resume.html">Resume</a>
                 <a href="bio.html">Biography</a>
+                Bees knees
             </p>
         </div>
     </body>
