--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Home</title>
-    </head>
-    <body>
-        <div class="centering">
-            <h1>Stephan Green</h1>
-            <img src="kassie.jpg" alt="Picture of my pitbull" id="dog_pic">
-            <p>
-                <a href="resume.html">Resume</a>
-                <a href="bio.html">Biography</a>
-            </p>
-        </div>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/pages/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Datrags</title>
+    <script type="module" crossorigin src="/pages/assets/index.e7d2747c.js"></script>
+    <link rel="stylesheet" href="/pages/assets/index.053e2266.css">
+  </head>
+  <body class="bg-slate-300">
+    <div id="app"></div>
+    
+  </body>
 </html>
